--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,19 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ABeeZee">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Acme">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bree Serif">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old Standard TT">
+
+  <script src="https://maker.js.org/target/js/browser.maker.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bezier-js@2/bezier.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css"/>
+  <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
+
+  <script src="http://opentype.js.org/dist/opentype.js" type="text/javascript"></script>
 </head>
 
 <body>
